# rust_simple

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  bacon.toml  flake.nix  renovate.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
